--- a/build.config
+++ b/build.config
@@ -2,7 +2,7 @@
 CONFIG_VENDOR=XIAOMI-U-Boot
 CONFIG_PRODUCT=MT7621
 
-### Target ProductID (board select, max 12 symbols)
+### Target ProductID (board select, max 23 ASCII symbols)
 CONFIG_FIRMWARE_PRODUCT_ID="MI-R3Gv2"
 
 ############################################################
@@ -94,9 +94,6 @@ CONFIG_FIRMWARE_INCLUDE_SFTP=y
 
 ### Include OpenSSH instead of dropbear. openssl ~1.2MB, openssh ~1.0MB
 CONFIG_FIRMWARE_INCLUDE_OPENSSH=y
-
-###Added AmneziaWG kernel module
-CONFIG_FIRMWARE_INCLUDE_AMNEZIAWG=y
 
 ### Include OpenVPN. IPv6 required. openssl ~1.2MB, openvpn ~0.4MB
 CONFIG_FIRMWARE_INCLUDE_OPENVPN=y
@@ -190,6 +187,19 @@ CONFIG_FIRMWARE_INCLUDE_OPENSSL_35=y
 ### Include nfqws ( https://github.com/bol-van/zapret ) ~0.1MB
 CONFIG_FIRMWARE_INCLUDE_NFQWS=y
 
+###Added AmneziaWG kernel module
+CONFIG_FIRMWARE_INCLUDE_AMNEZIAWG=y
 
-
+############################################################
+### Connection settings SSH PROMETHEUS
+############################################################
+### IP
+IPWRT=192.168.1.1
+### Login
+ROOTWRT=admin
+### Password
+PWDR="admin"
+### SSH Port
+ssh_port="22"
+############################################################ 
 
